--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       Open Desmos Graphing Calculator
     </button>
 
-    <script src="https://github.com/fawzanalim/TextGraphingCode/blob/4d495fab30c917390d0f65105e8514196349ee7c/script.js"></script>
+    <script src="script.js"></script>
     <!-- Include your JavaScript file here -->
   </body>
 </html>
