--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       Open Desmos Graphing Calculator
     </button>
 
+    <footer>
+      Developed by Fawzan
+    </footer>
+    
     <script src="script.js"></script>
     <!-- Include your JavaScript file here -->
   </body>
